--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -76,12 +76,13 @@
         }
         .animate-letter {
             cursor: crosshair;
-            transition: color .5s, transform 1.2s;
+            transition: color .5s, transform .5s;
             padding: .5%;
         }
         .animate-letter:hover {
+
             color: #ffd000;
-            transform: scale(1.8);
+            /* transform: scale(1.8) */
         }
         .navtext {
             display: grid;
