--- a/src/Containers/App.css
+++ b/src/Containers/App.css
@@ -121,7 +121,9 @@ section {
   font-size: 1.2vw;
 }
 .cover-content{
-  height: 100vh;
+  display: flex;
+  justify-content: center;
+  height: 100%;
   background-image: url("../Components/img/Patterns/Dark/moulin_@2X.png");
 }
 .gold-head {
