--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -4,16 +4,10 @@
 .zone:hover {
     box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
 }
-.page-container {
-    display: grid;
-    grid-template-columns: 1fr;
-    text-align: center;
-    gap: 0;
-    margin-left: 18%;
-    height: fit-content;
-}
+
 /* ALL THINGS TO DO WITH THE SIDE NAVIGATION BLOCK */
         .sidenav {
+            border-right:1px solid #bbb;
             z-index: 1;
             font-size: 2.5vw;
             padding-top: 1.5%;
@@ -22,7 +16,7 @@
             background-size: cover;
             position: fixed;
             height: 100%;
-            width: 18%;
+            width: 19%;
             text-align: center;
             font-variant: small-caps;
             color: aliceblue;
@@ -31,7 +25,6 @@
         }
         .sidenav:hover {
             transition: box-shadow .1s, text-shadow .4s linear, width .4s ease-out ;
-            width: 15%;
             text-shadow: 1px 1px 1px #1d1c1c,
             1px 2px 1px #919191,
             1px 8px 6px rgba(16,16,16,0.4),
@@ -76,13 +69,13 @@
         }
         .animate-letter {
             cursor: crosshair;
-            transition: color .5s, transform .5s;
+            transition: .2s;
             padding: .5%;
         }
         .animate-letter:hover {
 
             color: #ffd000;
-            /* transform: scale(1.8) */
+            transform: scale(1.8)
         }
         .navtext {
             display: grid;
@@ -108,6 +101,9 @@
                 1px 9px 10px rgba(255, 252, 99, .3),
                 10px 15px 10px rgb(15, 15, 14);
 
+        }
+        .home {
+            margin-top: 8vh;
         }
         .choice-container {
             display:grid;
