--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -40,17 +40,12 @@
     /* padding: 1vw; */
     font-size: 1.2vw;
 }
-.skills > ul {
-    text-align: left
+.skills ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-align: center;
 }
-
-
-
-
-
-
-
-
 
 
 /* COLORS  and PERCENTAGES*/
