--- a/src/Containers/App.css
+++ b/src/Containers/App.css
@@ -7,24 +7,17 @@
 }
 body {
   font-size: 1.5vw;
+  background: url('../Components/img/Patterns/Dark/moulin_@2X.png');
 }
-.zone {
-  border-right:1px solid #bbb;
-}
-.zone:hover {
-  box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
-}
+
 /* MAIN CONTENT STYLING  */
 .main-container {
-  position: relative;
+  position: absolute;
   z-index: 0;
   margin-left: 18%;
-
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
-  /* padding-left: 3%; */
-
 }
 .main-content {
   margin: 0;
@@ -36,10 +29,10 @@ body {
   background-size: auto;
 }
 section {
-  padding-top: 2vw;
+  padding-top: 5vh;
   padding-left: 3%;
   padding-right: 2%;
-  padding-bottom: 10vw;
+  padding-bottom: 5vh;
 }
 .footer {
   padding: 5vw;
@@ -51,7 +44,7 @@ section {
   font-variant: small-caps;
   justify-items: center;
   margin-bottom: 8vw;
-  padding-top: 1.2vw;
+  padding-top: .2vw;
   padding-bottom: 2vw;
   border-radius: 40px;
   color: white;
@@ -160,4 +153,56 @@ section {
   text-shadow: 1px 2px 3px #000000,
               0px 4px 6px white,
               0px 6px 25px rgba(255, 255, 255, 0.687);
+}
+.soundclick {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 5vh;
+  width:5rem;
+  height: 5rem;
+  z-index: 2;
+  /* background:blue; */
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  padding: 2vh;
+  /* margin: 2vh; */
+  color: rgba(255, 255, 255, 0.461);
+
+  transition: 1s;
+}
+.soundclick:hover {
+  /* transition: border-radius .2s; */
+  border-radius: 50%;
+  border: 1px solid silver;
+  background: rgba(255, 255, 255, 0.126);
+
+  color: rgba(255, 255, 255, 0.79);
+}
+.home-click {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 5vh;
+  width:5rem;
+  height: 5rem;
+  z-index: 2;
+  /* background:blue; */
+  position: fixed;
+  bottom: 8rem;
+  left: 0;
+  padding: 2vh;
+  /* margin: 2vh; */
+  color: rgba(255, 255, 255, 0.461);
+
+  transition: 1s;
+}
+.home-click:hover {
+  /* transition: border-radius .2s; */
+  border-radius: 50%;
+  border: 1px solid silver;
+  background: rgba(255, 255, 255, 0.126);
+
+  color: rgba(255, 255, 255, 0.79);
 }
