--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -9,11 +9,11 @@
     padding: 0;
     list-style: none;
     text-align: left;
-    font-size: 2vh;
+    font-size: 1.5vw;
 }
 input[type=checkbox] {
   color: red;
   margin-right: 1vw;
-  transform: scale(2);
+  transform: scale(1.2);
   pointer-events: none;
 }
