--- a/src/Containers/App.css
+++ b/src/Containers/App.css
@@ -158,16 +158,16 @@ section {
 .home-click {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  align-items: ;
-  font-size: 3.5vw;
+  align-items: center;
+  font-size: 2.5vw;
   width: auto;
-  height: 4vh;
+  height: 3vh;
   z-index: 2;
   gap: 1.5vw;
   /* background:blue; */
   position: fixed;
-  bottom: 0;
-  left: 0;
+  bottom: 2vh;
+  left: 1vw;
   padding: 1.5vw;
 
   /* margin: 2vh; */
