--- a/src/Components/ProfileBoxes/ProfileBoxes.css
+++ b/src/Components/ProfileBoxes/ProfileBoxes.css
@@ -24,8 +24,8 @@
                 inset rgb(134, 134, 134) 0px 0px 35px; */
 }
 .profile-box-title {
-    font-size: 2vw;
-    /* padding: 1%; */
+    font-size: 2.3vw;
+    padding: 1.2vh;
     color: #fcca36;
     font-variant: small-caps;
     text-shadow: #000000 0px 1px 1px,
